remove corpse code and clean up comments

--- a/class-03-responsive-mobile-first/Stephen-Caleb/starter-code/styles/modules.css
+++ b/class-03-responsive-mobile-first/Stephen-Caleb/starter-code/styles/modules.css
@@ -2,13 +2,11 @@
   background: #FFEAAA;
 }
 
-/* DONE: Float the main header to the left, to make room for the hamburger menu. */
 .heading-group-h1 {
   float: left;
   padding: 0 0 .2em 1em;
 }
 
-/* DONE: Add styles for the icon-menu class. It should be bigger, and off to the right. */
 .icon-menu {
   font-size: 40px;
   padding-top: 20px;
@@ -58,11 +56,7 @@
   padding-top: 12px;
 }
 
-/* DONE: Now add styles for how things should look on a larger screen:
-         - Hide the hamburger.
-         - Main should be all on one row, with padding spaced better for a larger screen.
-         - Just, ya know, try to make it look good! */
-
+/* styles for how things should look on a desktop screen: */
 @media only screen and (min-width: 640px) {
   .site-header {
     display: flex;
@@ -82,15 +76,3 @@
     display: block;
   }
 }
-
- /*@media (min-device-width: 640px) {
-   .icon-menu {
-     display: none;
-   }
-   .main-nav ul {
-     display: flex;
-     flex-direction: row;
-     padding: 0;
-     list-style: none;
-   }
- }*/
